# lyra

./: .clinerules  .env.template  .gitattributes  .gitignore  .tmp_counts.py  .tmp_fuzzy_verify.py  .tmp_post_top10.py  .tmp_queue_stats.py  .tmp_track_e2e.py  .tmp_verify_post_pipeline.py  .tmp_verify_tracks.py  AGENTS.md  CHANGES_2026-02-18.md  CLAUDE.md  COPILOT_SYSTEM_PROMPT.md  Cargo.toml  FEATURE_TEST_REPORT.md  Launch-Lyra.ps1  Launch-Oracle.ps1  README.md  _drain_loop.sh  boot_oracle.bat  boot_oracle.py  codex.md  current_state.md  docker-compose.lyra-protocol.yml  docker-compose.yml  litellm_config.yaml  lyra  lyra.bat  lyra.ps1  lyra_api.py  lyra_registry.db-shm  oracle.bat  oracle.cmd  oracle.ps1  oracle_architecture.md  oracle_library.db  pytest.ini  requirements-full.txt  (+5 more)
.beets/: config.example.yaml  config.yaml
.claude/: AGENTS.md  CASS_COPILOT_PROMPT.md  CLAUDE.md  LYRA_SESSION_INSTRUCTIONS.md  settings.json  settings.local.json
.githooks/: pre-commit
.github/: copilot-instructions.md
Reports/: backend_surface_audit_20260224_064012.json  backend_surface_audit_20260224_064337.json  backend_surface_audit_20260224_064917.json  backend_surface_audit_20260224_065605.json  backend_surface_audit_20260224_065818.json  backend_surface_audit_20260224_070057.json  backend_surface_audit_20260224_071832.json  backend_surface_audit_20260224_073041.json  backend_surface_audit_20260224_073547.json  backend_surface_audit_20260224_104600.json  backend_surface_audit_20260224_180434.json  backend_surface_audit_20260224_181337.json  batch_clean_overview_20260224.md  cli_smoke_report.json  curation_journal_20260219_014332.json  curation_plan_20260219_014332.csv  curation_plan_20260219_014332.json  curation_plan_20260223_133018.csv  curation_plan_20260223_133018.json  curation_plan_20260223_221504.json  curation_plan_20260224_012112.json  curation_plan_20260224_012135.json  curation_plan_20260224_012952.json  curation_plan_20260224_013346.json  (+45 more)
crates/lyra-core/: Cargo.toml
crates/lyra-core/examples/: add_library_root.rs  backup_env_creds.rs  check_library.rs  check_tracks_schema.rs  configure_tauri_app.rs  find_track_roots.rs  migrate_legacy_db.rs  show_library_proof.rs  smoke_api_live.rs  smoke_classifier.rs  smoke_deepcut.rs  smoke_enrichment.rs  smoke_graph_builder.rs  smoke_llm_client.rs  smoke_providers.rs  smoke_scanner.rs  smoke_scout.rs  smoke_search.rs  smoke_taste_prioritizer.rs  smoke_validator.rs  smoke_waterfall.rs  test_diagnostics.rs  test_playback.rs
crates/lyra-core/src/: acquisition.rs  acquisition_dispatcher.rs  acquisition_executor.rs  acquisition_planning.rs  acquisition_worker.rs  artist_intelligence.rs  audio_data.rs  catalog.rs  classifier.rs  commands.rs  composer_diagnostics.rs  composer_history.rs  config.rs  daemon_manager.rs  db.rs  deepcut.rs  diagnostics.rs  duplicates.rs  enrichment.rs  errors.rs  graph_builder.rs  intelligence.rs  lib.rs  library.rs  lineage.rs  llm_client.rs  logging.rs  native.rs  oracle.rs  playback.rs  playlists.rs  provider_runtime.rs  providers.rs  queue.rs  scores.rs  scout.rs  scrobble.rs  search.rs  state.rs  taste.rs  (+5 more)
crates/lyra-core/tests/: backend_runtime_confidence.rs
desktop/renderer-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/renderer-app/src-tauri/capabilities/: default.json
desktop/renderer-app/src-tauri/src/: main.rs  smtc.rs
(+689 files in other folders)
