[package]
name = "lyra_tauri"
version = "0.1.0"
description = "Lyra Oracle Tauri shell"
authors = ["Lyra Oracle"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "global-shortcut", "shell-open", "system-tray"] }
ureq = "2.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
