[package]
name = "lyra_tauri"
version = "0.1.0"
description = "Lyra native desktop player"
authors = ["Lyra Oracle"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
lyra-core = { path = "../../../crates/lyra-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tracing = "0.1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Media",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }
raw-window-handle = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
